# borg-agent

./: .gitignore  CONTRIBUTING.md
agent/: Cargo.toml  build.rs
agent/proto/: agent.proto
agent/src/: config.rs  telemetry.rs
docs/: README.md  pyproject.toml  zensical.toml
