[package]
name = "borg-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
prost-types = "0.13"

uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

windows-service = "0.7"
hostname = "0.4"

# Optional (if you want to later do registry inventory properly)
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
